--- a/nonrecursive/CMakeLists.txt
+++ b/nonrecursive/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(nonrecursive main.c)
+add_executable(nonrecursive main.c shared_sumset.c sumset_stack.c) # suboptimal linking
 target_link_libraries(nonrecursive io err atomic)
